<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.13">
  <POU Name="Control24V" Id="{454e5c67-702f-480f-863a-dbbb804afe59}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION Control24V
VAR_INPUT
END_VAR
VAR
	fbTon : TON;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[//Control 24V for simulation
//This is the simulation of the safety circuit. Power supply for the output modules.
IF (MeasuringData.ES1NC AND MeasuringData.ES2NC AND Inputs.Control24VButton) THEN
	fbTon(IN := TRUE, PT := T#3S);
ELSE
	fbTon(IN := FALSE);
END_IF

MeasuringData.ControlSupplyOK := fbTon.Q;

]]></ST>
    </Implementation>
    <LineIds Name="Control24V">
      <LineId Id="7" Count="1" />
      <LineId Id="11" Count="1" />
      <LineId Id="18" Count="1" />
      <LineId Id="13" Count="1" />
      <LineId Id="16" Count="1" />
      <LineId Id="9" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>